--- a/stylesheet.css
+++ b/stylesheet.css
@@ -46,5 +46,5 @@ h2{
     height:100px;
     width:2000px;
     padding:90px;
-    background:url("https://s-media-cache-ak0.pinimg.com/originals/de/80/b5/de80b5d2845334a3586c14ec6fedca90.jpg");
+    background:url("http://t.wallpaperweb.org/wallpaper/nature/3840x1024/9XMedia1280TripleHorizontalMountainsclouds.jpg");
 }
