--- a/quiz.css
+++ b/quiz.css
@@ -2,6 +2,9 @@ h1{
      text-align:center;
      font-family:"palantino";
      color:grey;
+     border-style:ridge;
+     border-color:black;
+     font-size:50px;
 }
 
 p{
